--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-facebook-login": "^4.1.1",
     "react-funnel-pipeline": "^0.2.0",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
@@ -50,7 +51,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
-    "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
