--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.23.3",
+    "apexcharts": "^3.41.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.3",
